--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://pdouu.github.io/fcc-react-calculator",
+  "homepage": "https://pdouu.github.io/fcc-react-calculator",
   "name": "fcc-react-calculator",
   "version": "0.1.0",
   "private": true,
